Fixed Mentor button spacing and spacing before/after links on main page

--- a/observatory/media/css/base.css
+++ b/observatory/media/css/base.css
@@ -148,3 +148,8 @@ h1, h2, h3, h4, h5, h6 {
 .clear {
   clear: both;
 }
+
+.rcos-links {
+	margin-top: 4px;
+	margin-bottom: 20px;
+}
